modificata api
